# blurr_base

./: CMakeLists.txt  README.md  blurr.sh  package.xml
config/: blurr_sim.yaml  pirov_sim.yaml
gui/: depth.launch  depth.yaml  force_angle.yaml  thrusters.launch  wrench.launch  wrench.yaml
joystick/: joy_example.py  teleop.launch
launch/: blurr.rviz  calibrate.launch  gazebo.launch  image_view.launch  joy_control.launch  ns.launch  pirov.rviz  pirov_thrusters.yaml  rviz.launch  sliders.launch  turtle_joy.launch
scenes/: pirov.xml
scripts/: rviz_bridge.py
src/: joy_control.cpp
